# dns-protocol

./: Cargo.toml
dns_codec/: Cargo.toml
dns_codec/examples/: udp.rs
dns_codec/src/: header.rs  lib.rs  name.rs  query.rs  question.rs  record.rs  resource.rs  response.rs  tests.rs
dns_codec/src/atom/: class.rs  header.rs  mod.rs  name.rs  qclass.rs  qtype.rs  rdata.rs  ttl.rs  type.rs
dns_codec/src/codec/: decode.rs  encode.rs  mod.rs
dns_codec/src/molecule/: mod.rs  question.rs  record.rs
dns_resolver/: Cargo.toml
dns_resolver/src/: io.rs  main.rs
dns_sans_io/: Cargo.toml
dns_sans_io/src/: lib.rs
