[workspace]
resolver = "2"
members = ["dns_codec", "dns_sans_io", "dns_resolver"]

[workspace.dependencies]
dns_codec = { path = "./dns_codec" }
dns_sans_io = { path = "./dns_sans_io" }

futures = { version = "0.3" }
tokio = { version = "1.38.0", default-features = false }
log = { version = "0.4" }
