[package]
name = "dns_sans_io"
version = "0.1.0"
edition = "2021"

[dependencies]
dns_codec = { workspace = true }
futures = { workspace = true }
log = { workspace = true }

tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }
tokio-util = { version = "0.7.11", features = ["codec", "io", "io-util", "net"] }

[dev-dependencies]
test-log = "0.2"
